{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 136,
  "lineage": "c14937c1-f48c-7670-92d2-a3ffbc1ab463",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DevOps_Project_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d34b9b367fa9f02e",
            "association_id": "eipassoc-04eead3bd9884ce63",
            "domain": "vpc",
            "id": "eipalloc-0d34b9b367fa9f02e",
            "instance": "i-03bcdc9c15e71c24f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e064a675cc72626b",
            "private_dns": "ip-10-0-1-36.ec2.internal",
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-52-20-174-69.compute-1.amazonaws.com",
            "public_ip": "52.20.174.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Dev_Web_Server",
            "aws_security_group.DevOps_Project_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DevOps_Project_aws_ngw_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eaec5816a0ae48aa",
            "domain": "vpc",
            "id": "eipalloc-0eaec5816a0ae48aa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-112-252.compute-1.amazonaws.com",
            "public_ip": "3.233.112.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Dev_Web_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:272603991089:instance/i-03bcdc9c15e71c24f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bcdc9c15e71c24f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOps_Project_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e064a675cc72626b",
            "private_dns": "ip-10-0-1-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094a9e87cb601a95b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0785ebb8e320f9d48",
            "tags": {
              "Name": "Web_Server"
            },
            "tags_all": {
              "Name": "Web_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b192434fe836bfa"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps_Project_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Pro_DB_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:272603991089:instance/i-06b24bc104bf6e2d3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b24bc104bf6e2d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOps_Project_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06823ffbb5526fcab",
            "private_dns": "ip-10-0-2-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d34d185540def273",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0104cae23bc4e051a",
            "tags": {
              "Name": "Pro_Server"
            },
            "tags_all": {
              "Name": "Pro_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b192434fe836bfa"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps_Project_SG",
            "aws_subnet.private_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DevOps_Project_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:internet-gateway/igw-0e7e46b7ca5978650",
            "id": "igw-0e7e46b7ca5978650",
            "owner_id": "272603991089",
            "tags": {
              "Name": "DevOps_Project_IGW"
            },
            "tags_all": {
              "Name": "DevOps_Project_IGW"
            },
            "vpc_id": "vpc-0771c0e9789ca1699"
          },
          "dependencies": [
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DevOps_Project_aws_ngw_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eaec5816a0ae48aa",
            "association_id": "eipassoc-00c9f7d1c8fbf219b",
            "connectivity_type": "public",
            "id": "nat-0d33f258248e15eba",
            "network_interface_id": "eni-0fa1bc446bac904b3",
            "private_ip": "10.0.1.202",
            "public_ip": "3.233.112.252",
            "subnet_id": "subnet-0785ebb8e320f9d48",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.DevOps_Project_aws_ngw_id",
            "aws_subnet.public_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:route-table/rtb-01dd2b8a8aa64b951",
            "id": "rtb-01dd2b8a8aa64b951",
            "owner_id": "272603991089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7e46b7ca5978650",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table"
            },
            "tags_all": {
              "Name": "Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0771c0e9789ca1699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DevOps_Project_IGW",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:route-table/rtb-075aaa6bbf88741d3",
            "id": "rtb-075aaa6bbf88741d3",
            "owner_id": "272603991089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d33f258248e15eba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route_Table"
            },
            "tags_all": {
              "Name": "Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0771c0e9789ca1699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.DevOps_Project_aws_ngw_id",
            "aws_nat_gateway.DevOps_Project_aws_ngw_id",
            "aws_subnet.public_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_RT_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab497527fe99827",
            "route_table_id": "rtb-075aaa6bbf88741d3",
            "subnet_id": "subnet-0104cae23bc4e051a"
          },
          "dependencies": [
            "aws_eip.DevOps_Project_aws_ngw_id",
            "aws_nat_gateway.DevOps_Project_aws_ngw_id",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da29a4d937af98f9",
            "route_table_id": "rtb-01dd2b8a8aa64b951",
            "subnet_id": "subnet-0785ebb8e320f9d48"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps_Project_IGW",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.public_subnet",
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DevOps_Project_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:security-group/sg-03b192434fe836bfa",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b192434fe836bfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DevOps_Project_SG",
            "name_prefix": "",
            "owner_id": "272603991089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps_Project_SG"
            },
            "tags_all": {
              "Name": "DevOps_Project_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0771c0e9789ca1699"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:subnet/subnet-0104cae23bc4e051a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0104cae23bc4e051a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272603991089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0771c0e9789ca1699"
          },
          "dependencies": [
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:subnet/subnet-0785ebb8e320f9d48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0785ebb8e320f9d48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272603991089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0771c0e9789ca1699"
          },
          "dependencies": [
            "aws_vpc.DevOps_Project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevOps_Project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:272603991089:vpc/vpc-0771c0e9789ca1699",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0308638ed12c2a34d",
            "default_route_table_id": "rtb-0b74c28cacc480a32",
            "default_security_group_id": "sg-0600b92b7bc6f91f8",
            "dhcp_options_id": "dopt-085f7cd0f6abe143b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0771c0e9789ca1699",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b74c28cacc480a32",
            "owner_id": "272603991089",
            "tags": {
              "Name": "DevOps_Project_vpc"
            },
            "tags_all": {
              "Name": "DevOps_Project_vpc"
            }
          }
        }
      ]
    }
  ]
}